--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
     "dependencies": {
         "chai": "*",
-        "mocha": "*"
+        "mocha": "*",
+        "crypto-js": "*",
+        "ws": "*"
     }
 }
